test/types/type_variables/deitz/test_clone_class1b.good
Error: Type mismatch in assignment from float to int (test_clone_class1b.chpl:2)
